# npm-register-cli

./: README.md  package.json  setup.cfg  setup.py
scripts/: npm-register
