[metadata]
name = npm-register-cli
version = 2018.11.20
url = https://github.com/looking-for-a-job/npm-register-cli
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = npm

[options]
install_requires = 
	setuptools
scripts = 
	scripts/npm-register
